@@ -321,11 +321,6 @@ if ($Projects) {
     }
 }
 
-if ($BuildJava) 
-{  
-    $env:JDK_JAVA_OPTIONS="--enable-native-access=ALL-UNNAMED"
-}
-
 if ($NoBuildInstallers) { $MSBuildOnlyArguments += "/p:BuildInstallers=false"; $BuildInstallers = $false }
 if ($BuildInstallers) { $MSBuildOnlyArguments += "/p:BuildInstallers=true" }
 
